# Healthcare-MCP

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
docs/specification/: guardrails.md  index.md
examples/: README.md  hmcp_agent_demo.py  hmcp_demo.py  hmcp_llm_demo.py  hmcp_server_helper_demo.py  multi_agent_handoff.md  multi_handoff_agent_demo.py  requirements.txt
src/hmcp/: README.md
src/hmcp/agent/: agent.py  multi_agent_handoff.py
src/hmcp/client/: hmcp_client.py  register_client.py
src/hmcp/config/: actions.py
src/hmcp/mcpserver/: guardrail.py  hmcp_server.py
src/hmcp/server/: auth_middleware.py  fastmcp_auth.py  hmcp_server.py
src/hmcp/shared/auth/: __init__.py  config.py  exceptions.py  jwt_handler.py  oauth_client.py  oauth_server.py  utils.py
src/hmcp/shared/guardrail_config/: actions.py  config.yml  guardrail.py
src/hmcp/shared/server_helper/: server_helper.py
tests/hmcp/client/: test_hmcp_client.py
tests/hmcp/server/: __init__.py  test_fastmcp_auth.py  test_hmcp_server.py
tests/hmcp/shared/guardrail_config/: test_guardrail.py
